--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -228,11 +228,6 @@ body {
   transition: background-color 0.2s ease;
 }
 
-.sidebar-toggle:hover,
-.new-chat-button:hover {
-  background-color: #2d336b47;
-}
-
 .sidebar-closed + .sidebar-controls {
   flex-direction: column;
 }
@@ -437,7 +432,7 @@ body {
   gap: 1rem;
   overflow-y: auto;
   padding: 1rem;
-  margin-bottom: 80px; /* Space for the chat form */
+  margin-bottom: 65px; /* Space for the chat form */
 }
 
 .message {
@@ -549,6 +544,7 @@ body {
   max-width: calc(var(--chat-max-width) - 130px);
   min-height: 2rem; /* Minimum height */
   max-height: 15rem; /* Maximum height */
+  height: auto;
   overflow-y: auto; /* Add scrollbar when content exceeds max height */
   display: flex;
   align-items: flex-start; /* Align to top instead of center */
@@ -604,7 +600,9 @@ body {
 }
 
 .upload-button:hover,
-.submit-button:hover {
+.submit-button:hover,
+.sidebar-toggle:hover,
+.new-chat-button:hover {
   color: var(--button-hover);
 }
 
