--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@
   --h6-size: calc(var(--small-size) / var(--ratio));
 
   --font: 'Times New Roman', Times, serif, sans-serif;
-  --font-size: 18px;
+  --font-size: 16px;
 
   /* Spacing System */
   --margin-xxs: 0.25rem;
@@ -38,7 +38,7 @@
 
   /* Container Widths */
   --sidebar-width: 400px;
-  --chat-max-width: 1000px;
+  --chat-max-width: 50%;
   --message-max-width: 70%;
 
   /* Border Radius */
@@ -181,7 +181,6 @@ body {
   display: flex;
   height: 100vh;
   transform: width 0.3s ease;
-  flex: 0 0 auto;
 }
 
 .sidebar {
@@ -362,7 +361,7 @@ body {
 
 /************* Center Start ****************/
 .centered-start {
-  flex: 3;
+  flex: 4;
   display: flex;
   position: fixed;
   flex-direction: column;
@@ -416,7 +415,7 @@ body {
 }
 
 .chat-container {
-  flex: 3;
+  flex: 4;
   display: flex;
   flex-direction: column;
   height: calc(100vh - 80px);
@@ -524,7 +523,7 @@ body {
   bottom: 0.75rem;
   margin-bottom: 8px;
   width: 100%;
-  max-width: var(--chat-max-width);
+  max-width: 100%;
   gap: 0.5rem;
 }
 
@@ -581,6 +580,7 @@ body {
 
 .accuracy-disclaimer {
   align-self: center;
+  transform: translateX(-200%);
 }
 
 .chat-input::placeholder {
