--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -487,7 +487,7 @@ body {
   display: flex;
   align-items: center;
   flex: 1;
-  opacity: 1;
+  scrollbar-color: transparent transparent;
 }
 
 .logo-Center {
@@ -608,10 +608,10 @@ body {
 }
 
 @keyframes bounce {
-  0%, 80%, 100% { 
+  0%, 80%, 100% {
     transform: scale(0);
-  } 
-  40% { 
+  }
+  40% {
     transform: scale(1.0);
   }
 }
@@ -669,7 +669,7 @@ body {
   resize: none; /* Prevent manual resizing */
   overflow-y: auto; /* Add scrollbar when needed */
   line-height: 1.5; /* Improve text readability */
-  padding: 0.2; /* Remove padding since container has padding */
+  padding: 0; /* Remove padding since container has padding */
   margin: 0;;
   width: 100%;
 }
@@ -681,6 +681,16 @@ body {
   font-size: 0.8;
   color: var(--text-color);
   /*transform: translateX(-200%);*/
+}
+
+.Llama-disclaimer {
+  align-self: center;
+  width: 100%;
+  text-align: center;
+  font-size: 0.8;
+  color: var(--text-color);
+  opacity: 0.8;
+  font-style: italic;
 }
 
 .chat-input::placeholder {
